[package]
name          = "rosu"
version       = "0.5.0"
authors       = ["MaxOhn <ohn.m@hotmail.de>"]
edition       = "2018"
description   = "A fully functional wrapper for the osu! API"
license       = "MIT"
readme        = "Readme.md"
keywords      = ["osu", "api", "wrapper"]
repository    = "https://github.com/MaxOhn/rosu"
documentation = "https://docs.rs/rosu/"

[features]
default = []
serialize = ["serde_repr"]
metrics = ["prometheus"]
cache = ["darkredis", "serialize"]

[dependencies]
bitflags     = "1.2"
chrono       = "0.4"
log          = "0.4"
serde_json   = "1.0"

[dependencies.bytes]
version = "1.0"
default-features = false

[dependencies.darkredis]
version  = "0.7"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.prometheus]
version  = "0.11"
optional = true

[dependencies.reqwest]
version          = "0.11"
default-features = false
features         = ["rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_repr]
version  = "0.1"
optional = true

[dependencies.tokio]
version = "1.0"
default-features = false
features = ["time"]

[dev-dependencies]
env_logger = "0.8"
kankyo     = "0.3"
tokio      = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }