[package]
name          = "rosu"
version       = "0.5.0"
authors       = ["MaxOhn <ohn.m@hotmail.de>"]
edition       = "2018"
description   = "An osu! API v1 wrapper"
license       = "MIT"
readme        = "Readme.md"
keywords      = ["osu", "api", "wrapper"]
repository    = "https://github.com/MaxOhn/rosu"
documentation = "https://docs.rs/rosu/"

[features]
default = []
serialize = ["serde_repr"]
metrics = ["prometheus"]
cache = ["darkredis", "serialize"]

[dependencies]
bitflags = { version = "1.2" }
bytes = { version = "1.0", default-features = false }
chrono = { version = "0.4" }
darkredis = { version = "0.8", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = { version = "0.4" }
prometheus = { version = "0.11", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1", optional = true }
tokio = { version = "1.0", default-features = false, features = ["time"] }

[dev-dependencies]
env_logger = { version = "0.10" }
dotenvy = { version = "0.15" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }